--- a/discordlogin.html
+++ b/discordlogin.html
@@ -43,7 +43,7 @@
   <div class="container">
     <h1>🔐 Autentificare cu Discord</h1>
     <p>Apasă pe buton pentru a te autentifica</p>
-    <a class="btn" href="https://discord.com/api/oauth2/authorize?client_id=TAU_CLIENT_ID&redirect_uri=https%3A%2F%2Ftesteledepartamentuluimedical.vercel.app%2Fquiz.html&response_type=token&scope=identify">
+    <a class="btn" href="https://discord.com/api/oauth2/authorize?client_id=1402050111625760788&redirect_uri=permissions=0&integration_type=0&scope=bot
       Autentificare
     </a>
   </div>
