--- a/index.html
+++ b/index.html
@@ -1,58 +1,51 @@
-<!DOCTYPE html>
-<html lang="ro">
-<head>
-  <meta charset="UTF-8">
-  <title>Teste Medicale</title>
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      height: 100vh;
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(to right, #89f7fe, #66a6ff);
-    }
-    .card {
-      background: #fff;
-      padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 12px 24px rgba(0,0,0,0.1);
-      text-align: center;
-      width: 90%;
-      max-width: 420px;
-    }
-    .card h1 {
-      font-size: 28px;
-      margin-bottom: 16px;
-      color: #333;
-    }
-    .card p {
-      font-size: 16px;
-      color: #555;
-      margin-bottom: 24px;
-    }
-    .btn {
-      background: #3b5bfd;
-      color: #fff;
-      padding: 14px 30px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background 0.3s;
-      text-decoration: none;
-    }
-    .btn:hover {
-      background: #2a4bd8;
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>🩺 Teste Grilă Medicale</h1>
-    <p>Exersează, învață și progresează cu ajutorul platformei noastre.</p>
-    <a href="discordlogin.html" class="btn">Începe testul</a>
-  </div>
-</body>
-</html>
+*{
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	font-family: 'poppins', sans-serif;
+	font-size: 19px;
+}
+body{
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-image: url(image_medici.png);
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+.container{
+	width: 950px;
+	padding: 50px;
+	border: 5px solid #000000;
+	border-radius: 30px;
+	background-color: #700101;
+}
+h4{
+	margin-bottom: 25px;
+	font-size: 45px;
+	color: white;
+}
+input{
+	width: 100%;
+	padding: 5px;
+	margin-bottom: 15px;
+}
+textarea{
+	width: 100%;
+	padding: 10px;
+	line-height: 50%;
+	text-align: left;
+	align-content: normal;
+}
+#submit{
+	border: none;
+	background-color: rgb(24, 24, 24);
+	color: white;
+	width: 320px;
+	margin-top: 20px;
+	border-radius: 15px;
+}
+#submit:hover{
+	background-color: #333333;
+}
